# airflow_dbt_bigquery_DE_case

./: .env example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dag_acidentes_brasil.py  dag_acidentes_brasil_gcp.py  dag_acidentes_brasil_local.py  dag_consumer_bigquery_dbt_datasets.py  dag_ingestion_gcp.py  dag_ingestion_local.py
dags/dbt/: .user.yml  dbt_project.yml  profiles.yml
dags/dbt/models/: sources.yml
dags/dbt/models/gold/: dim_acidente.sql  dim_acidente.yml  dim_cidade.sql  dim_cidade.yml  dim_regional.sql  dim_regional.yml  dim_tempo.sql  dim_tempo.yml  fct_acidentes_brasil.sql  fct_acidentes_brasil.yml
dags/dbt/models/silver/: stg_acidentes_brasil.sql
include/datalake/bronze/acidentes_brasil/ano=2020/uf=AC/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=AL/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=AM/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=AP/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=BA/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=CE/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=DF/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=ES/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=GO/: part-0.snappy.parquet
include/datalake/bronze/acidentes_brasil/ano=2020/uf=MA/: part-0.snappy.parquet
include/etl/: to_bronze.py  to_silver.py
(+206 files in other folders)
